# rmit2012_i3d

./: .gitignore  CMakeLists.txt  README.md  generate_project_vs2010.bat  rmit2012_i3d.pro
VS2010/: i3d.sln  i3d.vcxproj  i3d.vcxproj.filters  main.vcxproj  main.vcxproj.filters  rmit2012_i3d.sln
data/: config.cfg
data/fonts/: Comfortaa_license.txt
data/scenes/: start.scene
data/textures/tiles/: water.jpg.txt
libs/include/glm/gtc/: matrix_transform.hpp
src/: event.cpp  main.cpp  myapp.cpp  myapp.h  precompile.h  precompile.h.cpp  utils.cpp  utils.h
src/app/: manager.cpp  manager.h  myapp.cpp  myapp.h  plane.cpp  plane.h  projectile.cpp  projectile.h  ship.cpp  ship.h  terrain.cpp  terrain.h  water.cpp  water.h  wave.cpp  wave.h
src/engine/: application.cpp  application.h  basegameobject.h  command.cpp  command.h  event.cpp  event.h  font.cpp  font.h  frameeventargs.cpp  frameeventargs.h  object.h  perlinnoise.cpp  perlinnoise.h  scene.cpp  scene.h  skybox.cpp  skybox.h  texture.cpp  texture.h  utils.cpp  utils.h
src/engine/camera/: basecamera.cpp  basecamera.h  perspectivecamera.cpp  perspectivecamera.h
src/engine/component/: transform.cpp  transform.h
src/engine/gameobject/: ball.cpp  ball.h  basecomponent.cpp  basecomponent.h  basegameobject.cpp  basegameobject.h  camera.cpp  camera.h  componentset.cpp  componentset.h  gameobjectset.cpp  gameobjectset.h  objectset.h  rigidbody.cpp  rigidbody.h  transform.cpp  transform.h
unix/: CMakeLists.txt
